--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
     <title>Codante - Card Perfil</title>
 </head>
 <body class="flex items-center justify-center w-full h-screen py-8 px-4 bg-blue-100 font-inter">
     <section class="max-w-[400px] w-full bg-white p-4 md:p-8 rounded-lg shadow-gray-400 shadow-lg">
         <div class="flex md:items-center md:justify-center flex-col md:flex-row gap-5 items-center space-x-4 mb-8 md:mb-4">
             <div class="w-30 h-30 rounded-full overflow-hidden">
-                <img class="block w-full" src="./assets/perfil.jpg" alt="Foto perfil">
+                <img class="block w-full" src="https://github.com/TamuraFelipe.png" alt="Foto perfil">
             </div>
             <div class="flex flex-col items-center md:items-start gap-2 md:gap-0">
                 <h1 class="text-xl text-black text-center font-bold">Felipe Tamura</h1>
