--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     <title>Codante - Card Perfil</title>
 </head>
 <body class="flex items-center justify-center w-full h-screen py-8 px-4 bg-blue-100 font-inter">
-    <section class="max-w-[400px] w-full bg-white p-4 md:p-8 rounded-lg shadow-gray-400 shadow-lg">
+    <section class="max-w-[500px] w-full bg-white p-4 md:p-8 rounded-lg shadow-gray-400 shadow-lg">
         <div class="flex md:items-center md:justify-center flex-col md:flex-row gap-5 items-center space-x-4 mb-8 md:mb-4">
-            <div class="w-30 h-30 rounded-full overflow-hidden">
+            <div class="w-30 md:w-40 h-30 md:h-40 rounded-full overflow-hidden">
                 <img class="block w-full" src="https://github.com/TamuraFelipe.png" alt="Foto perfil">
             </div>
             <div class="flex flex-col items-center md:items-start gap-2 md:gap-0">
-                <h1 class="text-xl text-black text-center font-bold">Felipe Tamura</h1>
-                <span class="text-sm text-gray-500">Desenvolvedor Front-End</span>
+                <h1 class="text-xl md:text-3xl text-black text-center font-bold">Felipe Tamura</h1>
+                <span class="text-sm md:text-[18px] text-gray-500">Desenvolvedor Front-End</span>
                 <div class="flex items-center justify-center gap-4 mb-1.5">
-                    <a class="text-2xl text-black block" href="https://github.com/TamuraFelipe" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a class="text-2xl text-sky-600 block" href="https://www.linkedin.com/in/felipe-diego-tamura/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a class="text-2xl text-black block" href="https://x.com/dih_tamura" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a class="text-2xl md:text-3xl text-black block" href="https://github.com/TamuraFelipe" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a class="text-2xl md:text-3xl text-sky-600 block" href="https://www.linkedin.com/in/felipe-diego-tamura/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a class="text-2xl md:text-3xl text-black block" href="https://x.com/dih_tamura" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 </div>
                 <a href="mailto:tamurafelipe@gmail.com" target="_blank" class="flex items-center gap-2 bg-gray-500 hover:bg-gray-400 text-white font-bold rounded-lg py-1 px-8">
                     <i class="fa-regular fa-envelope"></i>
-                    <span>Mensagem</span>
+                    <span class="text-[18px]">Mensagem</span>
                 </a>
             </div>
         </div>
-        <div class="w-full flex items-center justify-center gap-6 border-t border-gray-300 py-4">
+        <div class="w-full flex items-center justify-center gap-6 md:gap-8 border-t border-gray-300 py-4">
             <i class="fa-brands fa-html5 text-orange-600 text-5xl"></i>
             <i class="fa-brands fa-css3-alt text-sky-700 text-5xl"></i>
             <i class="fa-brands fa-js text-amber-300 text-5xl"></i>
